# byteforge-aegis-client-python

./: .gitignore  README.md  pyproject.toml
src/byteforge_aegis_client/: __init__.py  _http.py  aegis_client.py  config.py  exceptions.py  request_models.py  webhooks.py
tests/: conftest.py  test_admin.py  test_auth.py  test_email.py  test_me.py  test_password.py  test_sites.py  test_tenant_api_key.py  test_verification.py  test_webhooks.py
