[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byteforge-aegis-client-python"
version = "1.5.0"
description = "Python client for ByteForge Aegis multi-tenant authentication service"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Jason Byteforge", email = "jason@mzmail.me" },
]
keywords = ["byteforge", "aegis", "auth", "authentication", "multi-tenant", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "byteforge-aegis-models @ git+https://github.com/jmazzahacks/byteforge-aegis-models.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23.0",
]

[project.urls]
Repository = "https://github.com/jmazzahacks/byteforge-aegis-client-python"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/byteforge_aegis_client"]
